[package]
name = "quicssh"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "QUIC-based SSH proxy with connection migration support"

[[bin]]
name = "quicssh"
path = "src/main.rs"

[dependencies]
# QUIC + TLS
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"
rcgen = "0.13"
rustls-pemfile = "2"

# Async
tokio = { version = "1", features = ["full"] }

# CLI + Config
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
url = "2"
base64 = "0.22"
sha2 = "0.10"
dirs = "5"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
